# Proton-T

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  init.fish  init.ps1  install.ps1  install.sh  pyproject.toml  shell_init.sh
.github/: FUNDING.yml
docs/: index.html  main.js  styles.css
src/: config.rs  db.rs  main.rs  search.rs
src/proton_t/: __init__.py  cli.py  core.py  tui.py
tests/: test_logic.py
