[package]
name = "proton-t"
version = "0.1.4"
edition = "2021"
description = "A smarter cd command with frecency and fallback search"
license = "MIT"
repository = "https://github.com/Pheem49/Proton-T"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
colored = "2.2"
